--- a/templates/register.html
+++ b/templates/register.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block main %}
-    <form action="/">
+    <form action="/register" method="post">
         <div >
             <input autocomplete="off" autofocus name="username" placeholder="Username" type="text">
         </div>
