--- a/templates/error.html
+++ b/templates/error.html
@@ -1,7 +1,11 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>ERROR</title>
-    </head>
-    <body>ERROR</body>
-</html>
+{% extends 'layout.html' %}
+
+{% block title %}
+    Error
+{% endblock %}
+
+{% block main %}
+<h1>Error</h1>
+<br>
+<h3>{{message}}</h3>
+{% endblock %}
