--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 {% extends 'layout.html' %}
 
 {% block title %}
-    Login
+    notes
 {% endblock %}
 
 {% block main %}
@@ -18,10 +18,22 @@
     </thead>
     <tbody>
         {% for dict in list%}
-            <tr>
+            <tr class="rows" class="{{dict['tag']}}">
                 <td>{{dict['time']}}</td>
                 <td>{{dict['head']}}</td>
                 <td>{{dict['body']}}</td>
+
+
+                <td class="dropdown" class="menu"><svg  xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-three-dots" viewBox="0 0 16 16">
+                    <path d="M3 9.5a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3zm5 0a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3zm5 0a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3z"/>
+                  </svg> <div class="dropdown-content">
+                    <form action="/check" method="POST"><button type="submit" name='delete' value="{{dict['id']}}">Delete</button></form>
+                    <form action="/urgentTag" method="POST"><button type="submit" name='urgent' value="{{dict['id']}}">Urgent</button></form>
+                    <form action="/doneTag" method="POST"><button type="submit" name='done' value="{{dict['id']}}">Done</button></form>
+                  </div></td>
+
+
+
             </tr>
         {% endfor %}
     </tbody>
