--- a/templates/layout.html
+++ b/templates/layout.html
@@ -11,15 +11,15 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
         <!--add a favicon-->
         <link rel="icon" type="image/x-icon" href="/static/favicon.ico">
+        <!--add a styling sheet-->
+        <link rel="stylesheet" href="/static/css/style.css">
+        
         <title>YourList: {% block title %}{% endblock %}</title>
     </head>
     <body>
             <div>
                 <div>
                     {% if session["user_id"] %}
-                        <ul class="navbar-nav me-auto mt-2">
-                            <li><a href="/"></a></li>
-                        </ul>
                         <ul>
                             <li><a href="/logout">Log Out</a></li>
                         </ul>
@@ -34,5 +34,8 @@
         <main>
             {% block main %}{% endblock %}
         </main>
+        <!--add a JS code-->
+        <script type="text/javascript" href="/static/code/code.js"></script>
+        
     </body>
 </html>
