--- a/templates/index.html
+++ b/templates/index.html
@@ -30,6 +30,7 @@
                     <form action="/check" method="POST"><button type="submit" name='delete' value="{{dict['id']}}">Delete</button></form>
                     <form action="/urgentTag" method="POST"><button type="submit" name='urgent' value="{{dict['id']}}">Urgent</button></form>
                     <form action="/doneTag" method="POST"><button type="submit" name='done' value="{{dict['id']}}">Done</button></form>
+                    <form action="/entryTag" method="POST"><button type="submit" name='entry' value="{{dict['id']}}">Entry</button></form>
                   </div></td>
 
 
