--- a/templates/index.html
+++ b/templates/index.html
@@ -27,10 +27,10 @@
                 <td class="dropdown" class="menu"><svg  xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-three-dots" viewBox="0 0 16 16">
                     <path d="M3 9.5a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3zm5 0a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3zm5 0a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3z"/>
                   </svg> <div class="dropdown-content">
-                    <form action="/check" method="POST"><button type="submit" name='delete' value="{{dict['id']}}">Delete</button></form>
                     <form action="/urgentTag" method="POST"><button type="submit" name='urgent' value="{{dict['id']}}">Urgent</button></form>
                     <form action="/doneTag" method="POST"><button type="submit" name='done' value="{{dict['id']}}">Done</button></form>
                     <form action="/entryTag" method="POST"><button type="submit" name='entry' value="{{dict['id']}}">Entry</button></form>
+                    <form action="/delete" method="POST"><button type="submit" name='delete' value="{{dict['id']}}">Delete</button></form>
                   </div></td>
 
 
