--- a/templates/layout.html
+++ b/templates/layout.html
@@ -19,6 +19,10 @@
     <body>
             <div>
                 <div>
+                    
+                    <ul>
+                        <li><a href="/"><img src="/static/icon.png"height="100" width="100"></a></li>
+                    </ul>
                     {% if session["user_id"] %}
                         <ul>
                             <li><a href="/logout">Log Out</a></li>
