change email, database modification

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -25,7 +25,8 @@
                     </ul>
                     {% if session["user_id"] %}
                         <ul>
-                            <li><a href="/logout">Log Out</a></li>
+                            <li><a href="/logout">Log out</a></li>
+                            <li><a href="/email">Email</a></li>
                         </ul>
                     {% else %}
                         <ul>
