--- a/templates/delete.html
+++ b/templates/delete.html
@@ -10,7 +10,7 @@
 <br>
 {% for dict in list%}
 <h3>Are you sure you want to delete {{dict['head']}}?</h3>
-<form action="/validate" method="post"><button type="submit" name='delete' value="{{dict['id']}}" class="btn btn-primary">Yes</button></form>
+<form action="/validate deletion" method="post"><button type="submit" name='delete' value="{{dict['id']}}" class="btn btn-primary">Yes</button></form>
 <form action="/" ><button type="submit" class="btn btn-danger">No</button></form>
 
 
