--- a/templates/error.html
+++ b/templates/error.html
@@ -5,7 +5,8 @@
 {% endblock %}
 
 {% block main %}
-<h1>Error</h1>
 <br>
-<h3>{{message}}</h3>
+<h1 class="item">Error</h1>
+<br>
+<h4 class="item">{{message}}</h3>
 {% endblock %}
