--- a/templates/validate.html
+++ b/templates/validate.html
@@ -5,9 +5,14 @@
 {% endblock %}
 
 {% block main %}
-    <h2> Prove it is you!</h2>
+    <div class="item">
+        <br>
+    <h1> Prove it is you</h1>
     <form action="/deleted" method="post"><input type="password" name="password" placeholder="Password" autocomplete="off" autofocus>
         <input type="hidden" value="{{id}}" name="delete">
-        <button type="submit" class="btn btn-primary">It is me</button>
+        <br>
+        <br>
+        <button type="submit">It is me</button>
      </form>
+    </div>
 {% endblock %}
