--- a/templates/validateEmail.html
+++ b/templates/validateEmail.html
@@ -5,10 +5,15 @@
 {% endblock %}
 
 {% block main %}
-    <h2> Prove it is you!</h2>
+<div class="item">
+    <br>
+    <h1> Prove it is you</h1>
     <form action="/email change" method="post"><input type="password" name="password" placeholder="Password" autocomplete="off" autofocus>
         <input type="hidden" value="{{old}}" name="old">
         <input type="hidden" value="{{new}}" name="new">
-        <button type="submit" class="btn btn-primary">It is me</button>
+        <br>
+        <br>
+        <button type="submit">It is me</button>
      </form>
+    </div>
 {% endblock %}
