--- a/templates/login.html
+++ b/templates/login.html
@@ -5,13 +5,15 @@
 {% endblock %}
 
 {% block main %}
-<form action="/login" method="post">
+<br>
+<form action="/login" method="post" class="item">
     <div>
         <input autocomplete="off" autofocus id="username" name="username" placeholder="Username" type="text">
     </div>
     <div >
         <input id="password" name="password" placeholder="Password" type="password">
     </div>
+    <br>
     <button class="btn btn-primary" type="submit" >Log In</button>
 </form>
 {% endblock %}
